# mgfx

./: CMakeLists.txt  README.md  build.sh  compile_shaders.sh  unlit.frag.spv  unlit.vert.spv
assets/models/dirt/: durt.gltf
assets/shaders/: blit.frag.glsl  blit.vert.glsl  blur.frag.glsl  gizmos.frag.glsl  gizmos.vert.glsl  lit.frag.glsl  lit.slang  lit.vert.glsl  mgfxDebugText.slang  panoramic_viewer.frag.glsl  post_processing_blit.frag.glsl  post_processing_lit.frag.glsl  post_processing_lit.vert.glsl  shadows.vert.glsl  shadows_lit.frag.glsl  shadows_lit.vert.glsl  skybox.frag.glsl  text.frag.glsl  text.vert.glsl  triangle.frag.glsl  unlit.frag.glsl  unlit.slang
examples/: CMakeLists.txt  ex_common.c  ex_common.h
examples/assets/shaders/: blit.frag.glsl  gradient.comp  gradient.comp.glsl  lit.frag.glsl  lit.vert.glsl  pbr.frag.glsl  shadows.vert.glsl  shadows_lit.frag.glsl  shadows_lit.vert.glsl  skybox.frag.glsl  skybox.vert.glsl  sprites.frag.glsl  sprites.vert.glsl  text.frag.glsl  text.vert.glsl  triangle.frag  triangle.vert  triangle.vert.glsl  unlit.frag.glsl  unlit.vert.glsl
examples/clear_compute/: clear_compute.c
examples/clear_screen/: clear_screen.c  main.c
examples/cube_map/: cube_map.c
examples/cubes/: CMakeLists.txt  cubes.c  cubes.slang  mgfx.slang
examples/gltf_loading/: CMakeLists.txt  gltf_loader.c  gltf_loader.h  gltf_loading.c  lit.slang
examples/mxgui/: CMakeLists.txt  asset.c  asset.h  blit.slang  blur.slang  ecs.c  ecs.h  lit.slang  main.c  mgfx.slang  mgfxMaterial.slang  mx_material.c  mx_material.h  mxgui.c  mxgui.h  mxgui.slang  renderer.c  renderer.h  shadow.slang
examples/panoramic_viewer/: 54.json  panoramic_viewer.c
examples/post_processing/: CMakeLists.txt  blit.slang  lit.slang  mgfxMaterial.slang  post_processing.c  shadow.slang
examples/shadows/: lit.slang  shadow.slang  shadows.c
examples/sprites/: sprites.c
examples/text_rendering/: text_rendering.c
include/mgfx/: defines.h  mgfx.h
src/: mgfx.c  renderer.h  renderer_vk.c  renderer_vk.h
